--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3729,12 +3729,15 @@ label {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 45px;
+  margin-bottom: 15px;
+  min-height: 50px !important;
 }
 
 .card-journey-small .card-info .card-program .card-location .text-location {
-  background: url(../imgs/template/icons/location.svg) no-repeat left center;
+  background: url(../imgs/template/icons/location.svg) no-repeat;
   padding-left: 20px;
+  width: 200px !important;
+  background-position: left 0px top 2px;
 }
 
 .card-journey-small .card-info .card-program .card-location .text-star img {
@@ -14110,9 +14113,9 @@ a.link-black:hover svg {
   margin-bottom: 22px;
 }
 
-.tour-title-main {
+/* .tour-title-main {
   margin-bottom: 20px;
-}
+} */
 
 .tour-meta-right .btn-share {
   margin-right: 8px;
@@ -19329,6 +19332,11 @@ xl  80rem (1280px)  @media (width >= 80rem) { ... }
 .book-now-btn {
   background-color: #f58220;
   color: white;
+}
+
+.book-now-btn {
+  background-color: #f58220;
+  color: white;
   font-size: 13px !important;
   font-weight: 600 !important;
   padding: 4px 12px;
@@ -19372,7 +19380,7 @@ xl  80rem (1280px)  @media (width >= 80rem) { ... }
   border-left: 1px solid #00000040;
 }
 
-.check-avail-modal .lg\:w-2\/6 {
+.check-avail-modal .w-1-6 {
   width: 83.333333%;
 }
 
@@ -19404,6 +19412,7 @@ xl  80rem (1280px)  @media (width >= 80rem) { ... }
   font-size: 0.75rem;
   color: #ef4444;
 }
+
 .text-4aa301 {
   color: #4aa301;
 }
@@ -19441,4 +19450,32 @@ xl  80rem (1280px)  @media (width >= 80rem) { ... }
 
 .stepper_input::placeholder {
   font-size: 13px;
+}
+
+.room_options {
+  border-bottom: 2px solid #ccc !important;
+}
+
+.ant-message-notice-content {
+  background-color: #000 !important;
+  color: #fff !important;
+}
+
+.tcs-radio {
+  display: block;
+  /* Ensures the radio button takes the full width */
+  margin-left: 0;
+  /* Removes any left margin that may be causing it to be centered */
+  text-align: left;
+  /* Aligns the text to the left */
+  padding-left: 10px;
+  /* Adds a little padding for better visual alignment */
+}
+
+.tcs-radio .ant-radio-inner {
+  margin-bottom: -4px;
+}
+
+.w-1-6 {
+  width: 29%;
 }
